busstops/static/css/_base.scss
/* ... */
ul,
ol,
li {
    list-style: none;
    padding: 0;
}

ul,
ol {
    margin: 1em 0;
}

dt {
    font-weight: bold;
}

dd {
    margin: 0 0 1em;
}

.history {
    > li {
        list-style: decimal;
        margin-left: 1.75em;
        padding-left: .25em;
    }

    ::marker {
        font-variant-numeric: normal;
    }

    ul {
        display: flex;

        li {
            margin-right: 2em;
        }

        strong {
            display: block;
        }
    }
}

main li {
    break-inside: avoid;

    a {
        display: block;
        overflow: hidden;
        padding: .125em 0;
        text-overflow: ellipsis;
        white-space: nowrap;
    }
}

.has-smalls {
    li {
        a,
        a:hover .name {
            text-decoration: none;
        }

        a:hover span {
            text-decoration: underline;
        }
    }

    span {
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    small {
        color: $text-color;
        display: block;
        float: left;
        font-size: .75em;
        margin-right: .5em;
    }

    small:last-child {
        margin: 0;
        padding-bottom: .33em;
        float: none;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

.bulleted,
main p,
table {
    a {
        display: inline;
        padding: 0;
    }
}

.bulleted a {
    white-space: normal;
}

.breadcrumb {
    border-bottom: 1px solid $brand-color-darker;
    margin: 0 -1em;
    overflow: auto;
    padding: .5em 0 0 1em;
    white-space: nowrap;

    li {
        display: inline-block;
        margin: 0;
        margin-top: -.5em;

        &:after {
            color: $border-color-darker;
            content: '\203A';
            vertical-align: middle;
            padding: 0 .5em;
        }

        &:last-child:after {
            padding-right: 0;
            width: 0;
        }
    }

    a {
        display: inline-block;
        padding: .75em 0;
        vertical-align: middle;
    }

}

.services {
    a {
        align-items: center;
        display: flex;
        margin-bottom: 1em;
        white-space: normal;

        small {
            color: $text-color;
            white-space: nowrap;
            margin-left: 1em;
        }
    }

    a:hover {
        text-decoration: none;

        .description {
            text-decoration: underline;
        }
    }

    a:focus,
    a:active {
        color: $black;
    }
}

.name {
    border: 1px solid $border-color;
    color: $text-color;
    float: left;
    margin-right: 1em;
    padding: .125em .5em;
    text-align: center;
    font-variant-numeric: tabular-nums;

    &.is-short {
        font-size: 2em;
        line-height: 1em;
        margin-right: .5em;
        padding: .3125em .25em;
        white-space: nowrap;
    }

    + .name {
        border-left: 0;
        margin-left: -1em;
    }

    + .name.is-short {
        margin-left: -.5em;
    }
}

.has-smalls .name {
    margin-right: .75em;

    + .name {
        margin-left: -.75em;
    }

}

#buses-online {
    .button {
        margin-right: .5em;
    }
}

#map {
    bottom: 0;
    left: 0;
    position: relative;
    right: 0;
    top: 0;

    &.service-map.expanded {
        position: fixed;
    }
}

.journey {
    background: #fff;
    bottom: 0;
    display: none;
    left: 0;
    position: fixed;
    right: 0;
    top: 0;
    z-index: 1;

    &:target {
        display: block;
    }

    .map {
        bottom: 0;
        left: 0;
        position: absolute;
        right: 0;
        top: 96px;
    }

    .leaflet-popup-content {
        margin: 10px;
    }

    .details {
        padding: 1em;

        p {
            margin-top: 0;
        }

        .button {
            position: absolute;
            top: 1em;
            right: 1em;
        }
    }

    .trip + .map {
        bottom: 200px;
    }

    .trip {
        background: #fff;
        bottom: 0;
        height: 168px;
        overflow-y: auto;
        position: absolute;
        padding: 1em;
        padding-top: 0;

        table {
            table-layout: fixed;
        }

        thead {
            background: #fff;
            position: sticky;
            top: 0;
        }

        th,
        td {
            border-left: 0;
        }

        td {
            padding: .25em 0;
            text-align: right;
            vertical-align: bottom;
        }

        th:first-child,
        td:first-child {
            text-align: left;
            width: 100%;
        }
    }
}

.service-map {
    display: none;
    // make room for ads:
    margin-bottom: 50px;
    margin-top: 100px;
    box-shadow: #fff 0 -100px, #fff 0 100px;

    &.expanded {
        display: block;
        height: auto;
        z-index: 1;
    }
}

.trip-map-wrapper {
    margin: 1em -1em;
    position: sticky;
    top: 0;
}

.trip-map {
    height: 50vh;
}

.livery {
    display: inline-block;
    height: 1.5em;
    margin-right: .5em;
    vertical-align: text-top;
    width: 2.25em;
}

table .livery {
    margin: 0;
}

.bus {
    background: $white;
    border: 1px solid $white;
    height: 16px;
    line-height: 16px;
    overflow: hidden;
    fill: $text-color; // SVG text
    paint-order: stroke;

    text {
        stroke-linejoin: round;
        stroke-width: 2.5px;
        text-anchor: middle;
    }
}
/* ... */

